--- a/configs/task/nikkei_shock.yaml
+++ b/configs/task/nikkei_shock.yaml
@@ -2,7 +2,7 @@ evaluate_function:
   _target_: examples.nikkei_shock.evaluate.main
   program_path: ???
   results_dir: ???
-  # Note: added llm_judge in variant yaml
+  # Note: added llm_analyst and llm_reviewer in variant yaml
 
 distributed_job_config:
   _target_: shinka.launch.SlurmCondaJobConfig
@@ -12,7 +12,7 @@ distributed_job_config:
   - "hpcx/2.20"
   eval_program_path: "shinka/eval_hydra.py"
   conda_env: "shinka"
-  time: "00:10:00" 
+  time: "00:10:00"
   cpus: 1
   gpus: 1
   mem: "8G"
@@ -23,40 +23,28 @@ evo_config:
   job_type: local
   use_text_feedback: true
   task_sys_msg: |
-    You are an expert quantitative risk manager specializing in cross-asset stress
-    testing. Your mission is to design **worst-case market shock scenarios** that
-    expose hidden weaknesses in hedged portfolios, assuming **crisis-like market
-    conditions over the next conds.horizon_days**.
+    You are an expert prompt engineer specializing in financial risk analysis. Your
+    mission is to design effective prompts that guide an analyst LLM to produce
+    high-quality hedge-weakness analyses.
 
-    You are given:
-      • Instruments with MTM, delta/vega/gamma/FX/DV01 sensitivities
-      • A crisis-regime correlation matrix (`stats.corr_crisis`)
-      • Daily volatilities for equity, implied volatility (vol-of-vol), FX, and interest rates
-      • A designated horizon (`conds.horizon_days`) used for √T scaling
+    ## Context
 
-    Your job:
-      1. Infer the portfolio’s **true exposures** from the Greek breakdowns.
-      2. Determine **what each hedge instrument is intended to protect**.
-      3. Identify **structural weaknesses and residual risks** in the hedge overlay.
-      4. Propose **crisis-coherent multi-factor shocks** that exploit those weaknesses.
+    A quantitative optimizer has already computed worst-case market shocks for hedged
+    portfolios under crisis conditions. Your job is to build a clear, structured prompt
+    that helps an analyst LLM explain:
+      • What the portfolio's exposures are
+      • What each hedge is intended to protect
+      • Why the computed shock scenario is particularly harmful
+      • How the shocks exploit structural weaknesses in the hedge overlay
 
-    Typical fragilities to look for:
-      • sensitivity to sudden implied-volatility spikes (vega risk)
-      • convexity/gamma risk and sensitivity to large, sudden price moves (gap moves)
-      • co-movements implied by the crisis-regime correlation structure
-      • FX-direction mismatches (hedges assuming the wrong FX move in a crisis)
-      • adverse rate-direction effects based on DV01 and crisis correlations
-      • mis-sized, incomplete, or overly concentrated hedges
+    The analyst LLM will receive your prompt and produce a natural-language analysis.
+    A separate reviewer LLM will then evaluate the quality of that analysis. Your
+    prompt-building function will be evolved based on how well the analyst's outputs
+    score with the reviewer.
 
-    Worst losses usually arise from **combinations** of shocks. Design stresses that are
-    **plausible yet severe**, consistent with crisis correlations and volatility levels,
-    and avoid unrealistic or cartoonish extremes.
+    ## Dataclass Definitions
 
-    ============================================================
-    TYPE CONTRACT  (CRITICAL)
-    ============================================================
-
-    The following types are available (imported) for you to use:
+    All inputs are provided as typed dataclasses. You have access to these types:
 
     ```python
     @dataclass
@@ -70,7 +58,6 @@ evo_config:
         fx_linear: float    # FX sensitivity per 1σ FX move (scaled by mtm)
         ir_dv01: float      # DV01: JPY P&L per +1bp parallel rate move
 
-
     @dataclass
     class Greeks:
         # Greeks for a portfolio block.
@@ -80,15 +67,6 @@ evo_config:
         fx: float           # FX sensitivity (JPY / 1σ FX)
         dv01: float         # rate DV01 (JPY per +1bp move)
 
-
-    @dataclass
-    class GreeksBreakdown:
-        # Greeks for net, exposure-only, and hedge-only.
-        net: Greeks         # total portfolio Greeks
-        exposure: Greeks    # exposure leg Greeks
-        hedge: Greeks       # hedge leg Greeks
-
-
     @dataclass
     class Scenario:
         # Portfolio scenario: description + exposure and hedge legs + Greeks.
@@ -96,8 +74,7 @@ evo_config:
         description: str
         exposure: list[Instrument]
         hedge: list[Instrument]
-        greeks_breakdown: GreeksBreakdown
-
+        greeks: Greeks
 
     @dataclass
     class RiskStats:
@@ -107,140 +84,141 @@ evo_config:
         fx_vol: float            # Daily FX volatility (1σ) as a decimal
         ir_vol: float            # Daily interest rate volatility (1σ) as a decimal (on yield in decimal units)
         corr_crisis: np.ndarray  # shape (4, 4); Crisis-regime correlation matrix: order [equity, vol, fx, ir]
-
-
-    @dataclass
-    class SearchConds:
         horizon_days: int        # crisis horizon in days for √T scaling
-        loss_ratio: float        # designated loss ratio vs exposure, e.g. 0.25 for 25%
-        joint_sigma: float       # designated overall crisis severity in σ units, e.g. 3.0 for 3σ
-
-
-    @dataclass
-    class Rationale:
-        equity: str | None       # why the equity shock direction/magnitude was chosen
-        volatility: str | None   # why the vol shock direction/magnitude was chosen
-        fx: str | None           # FX rationale
-        rates: str | None        # rates rationale (based on DV01 in JPY per 1bp)
-
+        max_factor_sigma: float  # maximum allowed per-factor shock in σ units
+        max_joint_sigma: float   # maximum allowed joint shock in σ units (Mahalanobis distance)
 
     @dataclass
     class ShockParams:
-        # Final per-factor shocks in sigma units (1-day volatility) before time scaling
-        # and macro knobs. 
-        eq_shock_sigma: float    # equity shock in σ units (signed), e.g. -10.0 for -10σ equity
-        vol_shock_sigma: float   # volatility shock in σ units (signed), e.g. +10.0 for +10σ vol
-        fx_shock_sigma: float    # FX shock in σ units (signed), e.g. +8.0  for +8σ FX
-        ir_shock_sigma: float    # rate shock in σ units (signed), e.g. +5.0 for +5σ move on decimal yields
-        rationale: Rationale     # textual justifications
-
+        # Per-factor shocks in sigma units (1-day volatility) before time scaling.
+        eq_shock_sigma: float    # equity shock in σ units (signed), e.g. -2.8 for -2.8σ equity
+        vol_shock_sigma: float   # volatility shock in σ units (signed), e.g. +2.5 for +2.5σ vol
+        fx_shock_sigma: float    # FX shock in σ units (signed), e.g. +2.7 for +2.7σ FX
+        ir_shock_sigma: float    # rate shock in σ units (signed), e.g. +0.3 for +0.3σ move on decimal yields
+        joint_sigma: float       # Mahalanobis distance of the shock vector
 
     @dataclass
-    class ScenarioResponse:
-        analysis: str
-        shock_params: ShockParams
+    class FactorMoves:
+        # Factor moves in absolute units after applying volatilities and horizon scaling.
+        eq_move: float       # actual equity move (decimal, after vol & horizon scaling)
+        vol_move: float      # actual vol move (decimal)
+        fx_move: float       # actual FX move (decimal)
+        ir_move: float       # actual IR move (decimal)
+
+    @dataclass
+    class PnL:
+        # P&L breakdown by risk factor.
+        total: float
+        equity: float
+        vol: float
+        fx: float
+        rates: float
+
+    @dataclass
+    class PnLSummary:
+        # Complete P&L information for the portfolio.
+        net: PnL                      # net portfolio P&L
+        exposure: PnL                 # exposure-only P&L
+        hedge: PnL                    # hedge-only P&L
+        exposure_pnls: dict[str, PnL] # per-instrument exposure P&L
+        hedge_pnls: dict[str, PnL]    # per-instrument hedge P&L
+        loss: float                   # max(0, -net.total)
+        reference_notional: float     # sum of |mtm| of exposures
+        loss_ratio: float             # loss / reference_notional
     ```
 
-    ============================================================
-    FUNCTION CONTRACT  (CRITICAL)
-    ============================================================
+    ## Function Contract
 
-    You must edit the contents of this function without changing the signature:
+    You must implement this function:
 
     ```python
-    def analyze_hedge_weakness(
+    def build_analysis_prompt(
         scenario: Scenario,
         stats: RiskStats,
-        conds: SearchConds,
-    ) -> ScenarioResponse:
+        shock: ShockParams,
+        factor_moves: FactorMoves,
+        pnl_summary: PnLSummary,
+    ) -> str:
+        """
+        Build a prompt that guides the analyst LLM to produce a clear,
+        scenario-specific hedge-weakness analysis.
+
+        Returns:
+            str: The complete prompt text for the analyst LLM
+        """
     ```
 
-    Understand the structure of `scenario` and use `scenario.greeks_breakdown` to form
-    a clear picture of the aggregate delta, gamma, vega, FX, and DV01 exposures before
-    designing the shock. Use `stats.corr_crisis` to understand how equity, implied
-    volatility, FX, and rates tend to co-move under crisis conditions.
+    The function is marked with `# EVOLVE-BLOCK-START` and `# EVOLVE-BLOCK-END` comments.
+    You can modify the implementation within these markers, but do not change the
+    function signature.
 
-    As an illustrative pattern often seen in equity-led crises:
-      • equity moves down
-      • implied volatility typically moves up in crises; whether this worsens losses
-        depends on the sign of net vega
-      • FX moves in the correlation-consistent direction that is adverse to the portfolio’s net FX exposure
-      • yields move in a direction that worsens the sign of DV01
+    ## Prompt Design Guidelines
 
-    Avoid factor-move combinations that contradict the crisis-regime correlations
-    unless you provide a clear, scenario-specific justification based on the portfolio’s
-    structure.
+    Your prompt should guide the analyst LLM to:
 
-    You must return:
+    1. **Identify exposures clearly**
+       - Reference specific instrument names and their Greeks
+       - Explain net portfolio exposures (delta, gamma, vega, FX, DV01)
+       - Distinguish between exposure and hedge contributions
 
-      • analysis (str)
+    2. **Explain hedge intent**
+       - What each hedge instrument is designed to protect
+       - How hedges are expected to perform under normal conditions
 
-        A multi-line, technically precise explanation that includes:
-          • net exposures (delta, gamma, vega, FX, DV01)
-          • what each hedge is intended to protect
-          • structural weaknesses and residual risks
-          • why your proposed shock directions and magnitudes exploit those weaknesses
+    3. **Analyze the worst-case shock**
+       - Why these specific shock directions are harmful
+       - How shock magnitudes relate to crisis volatilities and correlations
+       - How the joint_sigma indicates crisis severity
 
-        The analysis must reference specific signs and magnitudes of the Greeks and
-        describe how the chosen shocks interact with the portfolio’s exposures.
-        Avoid generic or boilerplate language.
+    4. **Explain loss drivers**
+       - Which factor moves contribute most to the loss
+       - How linear and non-linear exposures (gamma, vega) amplify losses
+       - How crisis correlations link the factor moves
+       - Where hedges fail or underperform
 
-      • shock_params (ShockParams)
+    5. **Provide scenario-specific detail**
+       - Reference actual numbers (Greeks, shock values, P&L components)
+       - Avoid generic or template-like language
+       - Make the analysis specific to THIS portfolio and THIS shock
 
-        Your proposed crisis shock in **signed sigma units**:
-          • eq_shock_sigma
-          • vol_shock_sigma
-          • fx_shock_sigma
-          • ir_shock_sigma
+    **Effective prompts typically include:**
+    - Clear instructions and structure for the analysis
+    - Relevant quantitative data formatted readably
+    - Context about crisis regime and correlations
+    - Guidance on what makes this shock scenario particularly harmful
+    - Reminders to reference specific numbers and avoid boilerplate
 
-        These shocks must be:
-          • plausible and aligned with the crisis-regime correlation structure,
-          • adversarial to the portfolio’s net exposures,
-          • and chosen with the designated search conditions in mind
-            (`conds.loss_ratio`, `conds.joint_sigma`, `conds.horizon_days`).
+    **Avoid:**
+    - Overly verbose or repetitive prompts
+    - Asking the analyst to compute anything (all numbers are pre-computed)
+    - Generic instructions that could apply to any scenario
+    - Prompts that don't leverage the rich structured data available
 
-        Examples of adversarial directions:
-          • equity moves down for long-delta portfolios,
-          • large equity moves when gamma is negative (short convexity),
-          • implied-volatility spikes for short-vega portfolios,
-          • FX moves that worsen the portfolio’s net FX sensitivity,
-          • yield moves that worsen the sign of DV01.
+    ## Quality Criteria
 
-        Each field of `rationale` must contain a short, specific 1–2 sentence
-        justification (or None if not applicable). The rationale should reference
-        how the shock direction interacts with the portfolio’s exposures and why
-        the magnitude is appropriate under the crisis-regime correlations.
+    The analyst LLM's output (generated from your prompt) will be evaluated on:
+    - Correct identification of main exposures and risks
+    - Accurate explanation of hedge intent
+    - Clear identification of structural weaknesses
+    - Consistency with provided data (Greeks, shocks, P&L)
+    - Insight into cross-asset interactions and crisis behavior
+    - Technical accuracy and appropriate terminology
+    - Clarity, specificity, and organization
+    - Avoidance of generic or boilerplate language
 
-    Notes:
-      • `conds.horizon_days` is fixed; do NOT vary it.
-      • Crisis correlations are fixed; choose factor directions consistent with the
-        crisis-regime correlation structure unless you have a scenario-specific reason.
-      • Avoid trivially small shocks (e.g., well below 1σ); they are not meaningful
-        for multi-day crisis stress design.
-      • Combine factors when they reinforce the portfolio’s weaknesses.
+    Your prompt will be judged by how well it enables the analyst LLM to meet
+    these criteria. Iterate your prompt-building logic to maximize the quality
+    and consistency of the analyst's outputs across diverse scenarios.
 
-    Goal:
-      Produce a high-quality, scenario-specific analysis and a well-justified set of
-      multi-factor shocks that expose the portfolio’s weakest points under a plausible
-      crisis regime of length `conds.horizon_days`.
+    ## Important Notes
 
-      The shock magnitudes you choose (eq_shock_sigma, vol_shock_sigma,
-      fx_shock_sigma, ir_shock_sigma), together with the crisis statistics in `stats`
-      and the designated search conditions in `conds` (`conds.loss_ratio`,
-      `conds.joint_sigma`), determine the overall severity of the stress.
-
-      Shocks should follow crisis-consistent directions implied by the correlation
-      matrix unless a clear, scenario-specific justification supports an exception.
-      Excessively large magnitudes reduce plausibility.
-
-      Aim for an “efficient” stress: one that produces the designated loss level
-      while avoiding unnecessary severity in the combined factor moves.
-
-    IMPORTANT STYLE REQUIREMENTS:
-      • Do NOT copy any sentences or phrases from this instruction verbatim.
-      • Your analysis must be written in your own words and tailored to the specific scenario.
-      • Avoid any generic, boilerplate, or template-like summaries; always reference concrete details
-        (instrument names, signs/magnitudes of net delta/gamma/vega/FX/DV01, shock
-        directions, factor moves, and P&L contributions).
+    - Do NOT attempt to perform quantitative calculations - all numbers are provided
+    - Do NOT design new shocks - the optimizer has already found the worst case
+    - DO leverage all available structured data to create informative prompts
+    - DO provide clear guidance on what specific aspects to analyze
+    - DO format numbers readably for the analyst LLM
+    - DO adapt your prompt structure based on the specific scenario characteristics
+    - Do NOT copy phrases from these instructions verbatim into your prompts
+    - Your generated prompts should be written in your own words
 
 exp_name: nikkei_shock
