--- a/configs/variant/nikkei_shock_example_free.yaml
+++ b/configs/variant/nikkei_shock_example_free.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - override /database@_global_: island_small
+  - override /database@_global_: island_single
   - override /evolution@_global_: zero_budget
   - override /task@_global_: nikkei_shock
   - override /cluster@_global_: local
@@ -9,14 +9,14 @@ evaluate_function:
   llm_analyst:
     model_names: "ollama::llama3.1:8b"
     temperatures: 0.0
-    max_tokens: 8196
-    reasoning_efforts: "low"
     verbose: true
   llm_reviewer:
-    model_names: "ollama::llama3.1:8b"
+    model_names: "ollama::qwen2.5:3b"
     temperatures: 0.0
-    max_tokens: 8196
-    reasoning_efforts: "low"
+    verbose: true
+  llm_summarizer:
+    model_names: "ollama::qwen2.5:3b"
+    temperatures: 0.0
     verbose: true
 
 variant_suffix: "_example_free"
