--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "markdown",
     "aiofiles",
     "google-generativeai",
+    "ollama",
+    "ortools",
 ]
 
 [tool.setuptools]
